# telegram-marketplace-bot

./: .cursorrules  .env  README.md  alembic.ini  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 20250919_00_init.py  20250920_01_users_telegram_id_bigint.py  20250921_01_users_id_bigint.py
app/: config.py  database.py
app/bot/: keyboards.py
app/bot/handlers/: main.py
app/models/: coupon.py  order.py  user.py
app/scheduler/: tasks.py
app/services/: wallet_service.py
tests/: conftest.py  test_import_models.py  test_scheduler.py  test_user_creation_minimal.py  test_user_relations.py
