[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-marketplace-bot"
version = "0.1.0"
description = "בוט טלגרם Marketplace לקופונים וכרטיסים"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # טלגרם בוט
    "python-telegram-bot[ext]==22.4",
    
    # FastAPI ו-Web Framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "gunicorn==23.0.0",
    
    # מסד נתונים
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",  # PostgreSQL async driver
    "alembic==1.13.3",  # מיגרציות
    
    # הגדרות ו-Environment
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    
    # יצירת PDF ו-QR
    "qrcode[pil]==7.4.2",
    "reportlab==4.2.2",
    
    # עזר
    "httpx==0.27.2",  # HTTP client אסינכרוני
    "python-multipart==0.0.9",  # לטפסים
    "bcrypt==4.2.0",  # הצפנת סיסמאות
    "python-jose[cryptography]==3.3.0",  # JWT tokens
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/telegram-marketplace-bot"
Repository = "https://github.com/yourusername/telegram-marketplace-bot"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
